# mailagent

./: .pre-commit-config.yaml  README.md  pyproject.toml
.cursor/rules/project-rules/: setup-todo-tracking-agent.mdc
.cursor/rules/py-rules/: python-env-uv-agent.mdc  python-tdd-agent.mdc
.github/workflows/: ci.yml
docs/: google-cloud-setup.md  terraform-configs.md
docs/todos/: setup-todos-2025-06-14.md
